force-app/main/default/objects/Log__c/fields/Gold_IM_Available__c.field-meta.xml
<CustomField>
    <fullName>Gold_IM_Available__c</fullName>
    <label>Gold IM Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>