force-app/main/default/objects/Log__c/fields/IM_Class__c.field-meta.xml
<CustomField>
    <fullName>IM_Class__c</fullName>
    <label>IM Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>