force-app/main/default/objects/Log__c/fields/Lead_Class__c.field-meta.xml
<CustomField>
    <fullName>Lead_Class__c</fullName>
    <formula>TEXT(Lead__r.Customer_Persona__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Class</label>
    <type>Text</type>
</CustomField>