force-app/main/default/objects/Log__c/fields/Lead_Opp_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Opp_Phone__c</fullName>
    <label>Lead/Opp Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>