force-app/main/default/objects/Log__c/fields/Showroom_User__c.field-meta.xml
<CustomField>
    <fullName>Showroom_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom User</label>
    <referenceTo>Showroom_User__c</referenceTo>
    <relationshipLabel>Log</relationshipLabel>
    <relationshipName>Log</relationshipName>
    <type>Lookup</type>
</CustomField>