force-app/main/default/objects/Log__c/fields/Silver_IM_Avalilable__c.field-meta.xml
<CustomField>
    <fullName>Silver_IM_Avalilable__c</fullName>
    <label>Silver IM Avalilable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>