force-app/main/default/objects/Log__c/listViews/CallBackAPI_ConCallBackAPI_Controller_Classtroller_Class.listView-meta.xml
<ListView>
    <fullName>CallBackAPI_ConCallBackAPI_Controller_Classtroller_Class</fullName>
    <columns>NAME</columns>
    <columns>Method__c</columns>
    <columns>Message__c</columns>
    <columns>StackTrace__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>CallBackAPI_Controller Class</value>
    </filters>
    <label>CallBackAPI_Controller Class</label>
    <language>en_US</language>
</ListView>