force-app/main/default/objects/Log__c/listViews/CloudAgentAPIController_Class.listView-meta.xml
<ListView>
    <fullName>CloudAgentAPIController_Class</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Class__c</columns>
    <columns>Lead_Opp_Phone__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>RecordId__c</columns>
    <columns>StackTrace__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>CloudAgentAPIController</value>
    </filters>
    <label>CloudAgentAPIController_Class</label>
    <language>en_US</language>
</ListView>