force-app/main/default/objects/Log__c/listViews/Lead_Preference_Assignment.listView-meta.xml
<ListView>
    <fullName>Lead_Preference_Assignment</fullName>
    <columns>NAME</columns>
    <columns>Lead_Class__c</columns>
    <columns>IM_Class__c</columns>
    <columns>Gold_IM_Available__c</columns>
    <columns>Bronze_IM_Available__c</columns>
    <columns>Silver_IM_Avalilable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Preference Lead Assignment</value>
    </filters>
    <label>Lead Preference Assignment</label>
    <language>en_US</language>
</ListView>