force-app/main/default/objects/Log__c/listViews/LeadSquaredBatchCallOutHandler_logs.listView-meta.xml
<ListView>
    <fullName>LeadSquaredBatchCallOutHandler_logs</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Type__c</columns>
    <columns>StackTrace__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Message__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>LeadSquaredBatchCallOutHandler</value>
    </filters>
    <label>LeadSquaredBatchCallOutHandler logs</label>
    <language>en_US</language>
</ListView>