force-app/main/default/objects/Log__c/listViews/LeadSquareIntegration_Logs.listView-meta.xml
<ListView>
    <fullName>LeadSquareIntegration_Logs</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>LeadSquareIntegration_Controller</value>
    </filters>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>LeadSquareIntegration_Controller</value>
    </filters>
    <label>LeadSquareIntegration Logs</label>
    <language>en_US</language>
</ListView>