force-app/main/default/objects/Log__c/listViews/PropertyUDPReportURLQueueable_class.listView-meta.xml
<ListView>
    <fullName>PropertyUDPReportURLQueueable_class</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Class__c</columns>
    <columns>Lead_Opp_Phone__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>RecordId__c</columns>
    <columns>StackTrace__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>PropertyUDPReportURLQueueable class</value>
    </filters>
    <label>PropertyUDPReportURLQueueable_class</label>
    <language>en_US</language>
</ListView>