force-app/main/default/objects/Log__c/listViews/SendSMSController.listView-meta.xml
<ListView>
    <fullName>SendSMSController</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>StackTrace__c</columns>
    <columns>RecordId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>SendSMSController</value>
    </filters>
    <label>SendSMSController</label>
    <language>en_US</language>
</ListView>