force-app/main/default/objects/Log__c/listViews/UpdateLeadDetails_Controller.listView-meta.xml
<ListView>
    <fullName>UpdateLeadDetails_Controller</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Class__c</columns>
    <columns>Lead_Opp_Phone__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>RecordId__c</columns>
    <columns>StackTrace__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>UpdateLeadDetails_Controller</value>
    </filters>
    <label>UpdateLeadDetails_Controller</label>
    <language>en_US</language>
</ListView>