force-app/main/default/objects/Log__c/listViews/UpdateStatustoUnSuccessFull_Batch.listView-meta.xml
<ListView>
    <fullName>UpdateStatustoUnSuccessFull_Batch</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Class__c</columns>
    <columns>Lead_Opp_Phone__c</columns>
    <columns>Message__c</columns>
    <columns>Method__c</columns>
    <columns>RecordId__c</columns>
    <columns>StackTrace__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>UpdateStatustoUnSuccessFull_Batch class</value>
    </filters>
    <label>UpdateStatustoUnSuccessFull_Batch</label>
    <language>en_US</language>
</ListView>